Fixing scrollbar bug

--- a/next-app/src/components/Home/About/About.module.scss
+++ b/next-app/src/components/Home/About/About.module.scss
@@ -18,7 +18,7 @@
       gap: 16px;
       align-items: center;
       max-width: 590px;
-      overflow-x: hidden;
+      overflow: hidden;
 
       h2 {
         position: relative;
